# jsinfo-speedtest

./: pyproject.toml
src/jsinfo_speedtest/: cli.py
