[project]
name = "jsinfo-speedtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "niquests>=3.18.6",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
jsinfo-speedtest = "jsinfo_speedtest.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
